<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/fragment_home"
        android:icon="@drawable/ic_home_black_24dp"/>

    <item
        android:id="@+id/faves"
        android:title="@string/fragment_faves"
        android:icon="@drawable/ic_favorite_black_24dp"/>

    <!-- center item for fab -->
    <item
        android:id="@+id/fab"
        android:title=""/>

    <item
        android:id="@+id/notifications"
        android:title="@string/fragment_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"/>

    <item
        android:id="@+id/profile"
        android:title="@string/fragment_profile"
        android:icon="@drawable/ic_person_black_24dp"/>

</menu>