<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.PostActivity"
    android:background="@color/color_primary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/postToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:actionBarStyle"
        android:background="@color/color_primary_variant"
        android:layout_alignParentTop="true"
        android:elevation="1.2dp"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/color_text_primary"
            android:textSize="18.2sp"
            android:text="@string/toolbar_post_meme"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/postToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/postCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="15sp"
                android:inputType="textMultiLine"
                android:hint="@string/hint_caption"
                android:textColor="@color/color_text_primary"
                android:textColorHint="@color/color_text_secondary"
                android:background="@color/color_primary"
                android:importantForAutofill="no" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/postAddImage"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/content_select_meme"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_image_add" />

                <ImageView
                    android:id="@+id/postSelectImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/content_image"
                    android:scaleType="fitCenter"
                    android:visibility="gone" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>