<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CommentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/commentToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.Light"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentsRv"
        android:layout_below="@id/commentToolbar"
        android:layout_above="@id/commentDivider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"/>

    <RelativeLayout
        android:id="@+id/commentsEmptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/commentsEmptyStateImage"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/feed"
            android:contentDescription="@string/content_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/commentsEmptyStateImage"
            android:text="@string/empty_comments"/>

    </RelativeLayout>

    <View
        android:id="@+id/commentDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/addCommentLayout"/>

    <RelativeLayout
        android:id="@+id/addCommentLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/commentET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:maxLines="5"
            android:gravity="center_vertical"
            android:hint="@string/hint_new_comment"
            android:textSize="14sp"
            android:layout_toStartOf="@id/sendCommentLayout"
            android:inputType="text|textAutoComplete|textNoSuggestions|textAutoCorrect|textLongMessage|textMultiLine|textShortMessage"/>

        <com.gelostech.dankmemes.utils.SquareLayout
            android:id="@+id/sendCommentLayout"
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/sendComment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_image"/>

        </com.gelostech.dankmemes.utils.SquareLayout>

    </RelativeLayout>

</RelativeLayout>